PLFM-8687: Uses insert ignore rather than computing the diff